--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "jquery-date-dropdowns-forked",
+  "version": "1.0.0",
   "private": true,
   "devDependencies": {
     "grunt": "~0.4.5",
